First push on new version of GistFX